--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.8'
-    compile 'com.google.firebase:firebase-auth:16.2.0'
-    compile 'com.firebase:firebase-client-android:2.5.0'
-    compile "com.google.android.gms:play-services-gcm:16.1.0"
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.firebase:firebase-client-android:2.5.0'
+    implementation "com.google.android.gms:play-services-gcm:16.1.0"
 }
 apply plugin: 'com.google.gms.google-services'
